--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -1828,6 +1828,8 @@
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             ctx.drawImage(boardImg, 0, 0, canvas.width, canvas.height);
 
+            updateCurrentCube(current);
+
             const currentPlayer = data[current].player.toLowerCase();
             drawCheckers('red', whiteImg, positions.red, currentPlayer);
             drawCheckers('black', blackImg, positions.black, currentPlayer);
