--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -804,9 +804,13 @@
                             });
                         }
 
-                        // Force skip animation if error != '0'
+                        // Force skip animation and hide controls if error != '0'
                         if (error !== '0') {
                             skipAnimationEnabled = true;
+                            const animationControls = document.querySelector('.animation-controls');
+                            if (animationControls) {
+                                animationControls.style.display = 'none';
+                            }
                         }
 
                         const animationSpeedSlider = document.getElementById('animationSpeedSlider');
